--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=cGRE8-rdV1PhxOVBpoPV7fKdUXkDdKrY
 SESSION_DRIVER=cookie
+DB_CONNECTION=sqlite
+DB_HOST=127.0.0.1
+DB_USER=lucid
+DB_PASSWORD=lucid
+DB_NAME=lucid
