--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "@adonisjs/ace": "^6.9.3",
+    "@adonisjs/auth": "^4.2.4",
     "@adonisjs/core": "^5.0.0-preview-rc-1.9",
     "@adonisjs/fold": "^6.3.5",
+    "@adonisjs/lucid": "^8.2.2",
     "@adonisjs/session": "^3.0.4",
+    "@adonisjs/shield": "^3.0.4",
     "@adonisjs/view": "^2.0.7",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "sqlite3": "^5.0.0"
   }
 }
