--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,10 @@
     "types": [
       "@adonisjs/core",
       "@adonisjs/session",
-      "@adonisjs/view"
+      "@adonisjs/view",
+      "@adonisjs/shield",
+      "@adonisjs/lucid",
+      "@adonisjs/auth"
     ]
   }
 }
