--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=cGRE8-rdV1PhxOVBpoPV7fKdUXkDdKrY
+APP_KEY=
 SESSION_DRIVER=cookie
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
