--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "private": true,
   "scripts": {
     "build": "node ace build",
-    "start": "node ace serve --watch"
+    "start": "node ace serve --watch",
+    "test": "node build/japafile.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^2.1.3",
+    "@types/jsdom": "^16.2.3",
+    "@types/supertest": "^2.0.10",
     "adonis-preset-ts": "^1.0.4",
+    "execa": "^4.0.3",
+    "get-port": "^5.1.1",
+    "japa": "^3.1.1",
+    "jsdom": "^16.2.2",
     "pino-pretty": "^4.0.0",
+    "supertest": "^4.0.2",
     "typescript": "^3.9.6",
     "youch": "^2.0.10",
     "youch-terminal": "^1.0.0"
