--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@adonisjs/session": "^3.0.4",
     "@adonisjs/shield": "^3.0.4",
     "@adonisjs/view": "^2.0.7",
+    "bootstrap": "^4.5.0",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
