--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
   ],
   "exclude": [
     "node_modules",
-    "build"
+    "build",
+    "**/public/*.scss"
   ],
   "extends": "./node_modules/adonis-preset-ts/tsconfig",
   "compilerOptions": {
