--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "node ace build",
     "start": "node ace serve --watch",
-    "test": "node build/japafile.js"
+    "test": "set NODE_ENV=testing && node build/japafile.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^2.1.3",
